# ign-common

./: CMakeLists.txt  bitbucket-pipelines.yml
av/src/: AudioDecoder_TEST.cc  VideoEncoder_TEST.cc
cmake/: FindFreeimage.cmake  SearchForStuff.cmake  config.hh.in
doc/: header.html  mainpage.html
events/src/: Event_TEST.cc  MouseEvent_TEST.cc
examples/: CMakeLists.txt  cakes.cc  integrators.cc  robot.cc
examples/plugins/: CMakeLists.txt  Interfaces.hh  cakes.hh
graphics/include/ignition/common/: Mesh.hh  SubMesh.hh
graphics/src/: ColladaExporter_TEST.cc  ColladaLoader_TEST.cc  Dem_TEST.cc  GTSMeshUtils_TEST.cc  ImageHeightmap_TEST.cc  Image_TEST.cc  MeshCSG.cc  MeshManager.cc  MeshManager_TEST.cc  Mesh_TEST.cc  OBJLoader_TEST.cc  SVGLoader_TEST.cc  SubMesh_TEST.cc
include/ignition/common/: Animation.hh  Assert.hh  AssetDatabaseClient.hh  CMakeLists.txt  CMakeLists.txt.orig  ColladaExporter.hh  ColladaExporterPrivate.hh  ColladaLoader.hh  CommonTypes.hh  Exception.hh  GTSMeshUtils.hh  Material.hh  Mesh.hh  MeshCSG.hh  MeshExporter.hh  MeshLoader.hh  MeshManager.hh  ParserINI.hh  PluginLoader.hh  PluginPtr.hh  ProvideInterfaces.hh  STLLoader.hh  SpecializedPlugin.hh  SubMesh.hh  SystemPaths.hh
include/ignition/common/detail/: ProvideInterfaces.hh  SpecializedPlugin.hh
src/: Assert.cc  AssetDatabaseClient.cc  AssetDatabaseClient_TEST.cc  BVHLoader.cc  Base64_TEST.cc  CMakeLists.txt  ColladaExporter.cc  ColladaExporter_TEST.cc  ColladaLoader.cc  ColladaLoader_TEST.cc  Demangle.hh  EnumIface_TEST.cc  Exception.cc  Filesystem.cc  FilesystemBoost.cc  GTSMeshUtils.cc  Material.cc  Mesh.cc  MeshCSG.cc  MeshExporter.cc  MeshLoader.cc  MeshManager.cc  MeshManager_TEST.cc  Mesh_TEST.cc  NodeTransform.cc  OBJLoader.cc  OBJLoader_TEST.cc  ParserINI.cc  ParserINI_TEST.cc  PluginLoader.cc  PluginLoader_TEST.cc  STLLoader.cc  SubMesh.cc  SystemPaths.cc  SystemPaths_TEST.cc  Util.cc
test/: CMakeLists.txt
test/integration/: CMakeLists.txt  mesh.cc  plugin.cc
test/performance/: CMakeLists.txt  plugin_specialization.cc
test/plugins/: CMakeLists.txt  DummyPlugins.cc  DummyPlugins.hh
test/static_assertions/: CMakeLists.txt  plugin_no_base_class.cc  plugin_not_global_ns.cc
test/util/: BadPluginAPIVersionOld.cc  CMakeLists.txt  DummyPlugins.cc  DummyPlugins.hh  DummyPluginsOtherTranslationUnit.cc
tools/: code_check.sh
